<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Fresh 92.7</string>
    <string name="listen_live">Listen Live</string>
    <string name="now_playing">Just Played</string>
    <string name="news">News</string>
    <string name="program_guide">Guide</string>
    <string name="contact_us">Interactive</string>
    
    <string name="testsong_20_sec">http://livestream.freshfm.com.au:8004</string>
    
    <string name="title_placeholder">Fresh 92.7</string>
    <string name="artist_placeholder">The Rhythm of Adelaide\'s Youth</string>
    
    <string name="fresh_interactive">Get Fresh Interactive</string>
    <string name="studio_phone">Studio Phone: 1300 7 FRESH</string>
    <string name="studio_sms">Studio SMS: 19996884</string>
    <string name="about_fresh">About Fresh</string>
    <string name="fresh_blurb">More than just a radio station, Fresh is a way of life for its young listeners. Dedicated to educating, empowering and entertaining Adelaide’s young community, Fresh is an identity and culture that the youth can call their own. Fresh stays true to its community roots, with the station relying on its dedicated and passionate young volunteers who play a large role in contributing to everything, whether it be on-air or behind the scenes.</string>
    <string name="contact_fresh">Contact Fresh</string>
    <string name="address">Fresh Broadcasters Incorporated.\n3 Cinema Place\nAdelaide SA 5000</string>
    <string name="phone">(08) 8232 7927</string>
    <string name="email">admin@fresh927.com.au</string>
    <string name="web">fresh927.com.au</string>
   	<string name="serious_stuff">Serious Stuff</string>
   	<string name="version">App Version: </string>
   	<string name="disclaimer">We reserve the right to anonymously track the usage of the app. </string>
   	    
    
    
        <string name="app_version">0.5</string>
        <string name="button_close">Close</string>
        <string name="button_play">PLAY</string>
        <string name="button_stop">STOP</string>
        <string name="text_exception">Error</string>
        <string name="text_buffers">Buffers (ms)</string>
        <string name="text_buffers_audio">Audio</string>
        <string name="text_buffers_decode">Decode</string>
        <string name="text_revision">$Revision: 21 $</string>
        <string name="text_stopped">Stopped</string>
</resources>
